--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "[use user secrets]"
   },
   "AllowedHosts": "*"
 }
