--- a/CrudApplicationFrontend/package.json
+++ b/CrudApplicationFrontend/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "vite build --watch"
   },
   "dependencies": {
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "axios": "^1.6.4",
     "vite": "^5.0.10"
   }
 }
